update Api to SheCodes

--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
               <div class="current-weather-description">Partially clouded</div>
             </div>
             <div class="header-right col-6">
-              <div class="actual-maxminT maxminT">
-                <span class="maxT" id="current-maxT">25</span
-                ><span class="max-degree degree">°C</span>/<span
-                  class="minT"
-                  id="current-minT"
-                  >17</span
-                ><span class="min-degree degree">°C</span>
+              <div class="feels-like">
+                Feels like:
+                <span class="feeling-description"
+                  ><span id="feels-like">25</span
+                  ><span class="degree">°C</span></span
+                >
               </div>
               <div class="current-temperature">
                 <span class="current-temp"> 23</span
