--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <div class="header row">
             <img
               class="card-img day0-weather"
+              id="day0-icon"
               src="images/few-clouds-day.png"
               alt="SunCloud"
             />
