Trying to convert all units

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
               <div class="feels-like">
                 Feels like:
                 <span class="feeling-description"
-                  ><span id="feels-like">25</span
+                  ><span id="feels-like" class="temperature">25</span
                   ><span class="degree">°C</span></span
                 >
               </div>
               <div class="current-temperature">
-                <span class="current-temp"> 23</span
+                <span class="current-temp temperature"> 23</span
                 ><span class="current-unit degree">°C</span>
                 <span class="alternative-units"
                   >| <a id="alternative-degree" href="#">°F</a></span
@@ -108,8 +108,8 @@
                 alt="Cloud"
               />
               <div class="day1-maxminT maxminT">
-                <span class="maxT">22</span
-                ><span class="max-degree degree">°C</span>/<span class="minT"
+                <span class="maxT temperature">22</span
+                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
                   >16</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -122,8 +122,8 @@
                 alt="Cloud"
               />
               <div class="day2-maxminT maxminT">
-                <span class="maxT">21</span
-                ><span class="max-degree degree">°C</span>/<span class="minT"
+                <span class="maxT temperature">21</span
+                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
                   >15</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -136,8 +136,8 @@
                 alt="Cloud"
               />
               <div class="day3-maxminT maxminT">
-                <span class="maxT">23</span
-                ><span class="max-degree degree">°C</span>/<span class="minT"
+                <span class="maxT temperature">23</span
+                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
                   >17</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -150,8 +150,8 @@
                 alt="Cloud"
               />
               <div class="day4-maxminT maxminT">
-                <span class="maxT">23</span
-                ><span class="max-degree degree">°C</span>/<span class="minT"
+                <span class="maxT temperature">23</span
+                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
                   >17</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -164,15 +164,15 @@
                 alt="Cloud"
               />
               <div class="day5-maxminT maxminT">
-                <span class="maxT">22</span
-                ><span class="max-degree degree">°C</span>/<span class="minT"
+                <span class="maxT temperature">22</span
+                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
                   >14</span
                 ><span class="min-degree degree">°C</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="signature">
+        <div class="signature">Illustrations and 
           <a
             href="https://github.com/Aylhenia/GitHub-Challenge"
             target="_blank"
