update gitHub link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
               />
               <div class="day1-maxminT maxminT">
                 <span class="maxT temperature">22</span
-                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
+                ><span class="max-degree degree">°C</span>/<span
+                  class="minT temperature"
                   >16</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -123,7 +124,8 @@
               />
               <div class="day2-maxminT maxminT">
                 <span class="maxT temperature">21</span
-                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
+                ><span class="max-degree degree">°C</span>/<span
+                  class="minT temperature"
                   >15</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -137,7 +139,8 @@
               />
               <div class="day3-maxminT maxminT">
                 <span class="maxT temperature">23</span
-                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
+                ><span class="max-degree degree">°C</span>/<span
+                  class="minT temperature"
                   >17</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -151,7 +154,8 @@
               />
               <div class="day4-maxminT maxminT">
                 <span class="maxT temperature">23</span
-                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
+                ><span class="max-degree degree">°C</span>/<span
+                  class="minT temperature"
                   >17</span
                 ><span class="min-degree degree">°C</span>
               </div>
@@ -165,16 +169,18 @@
               />
               <div class="day5-maxminT maxminT">
                 <span class="maxT temperature">22</span
-                ><span class="max-degree degree">°C</span>/<span class="minT temperature"
+                ><span class="max-degree degree">°C</span>/<span
+                  class="minT temperature"
                   >14</span
                 ><span class="min-degree degree">°C</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="signature">Illustrations and 
+        <div class="signature">
+          Illustrations and
           <a
-            href="https://github.com/Aylhenia/GitHub-Challenge"
+            href="https://github.com/Aylhenia/Vanilla-Weather-App"
             target="_blank"
             id="gitHub"
             >Open-source code by </a
