add dark mode inside the card elements when is night

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
                 <span class="current-temp temperature"> 23</span
                 ><span class="current-unit degree">°C</span>
                 <span class="alternative-units"
-                  >| <a id="alternative-degree" href="#">°F</a></span
+                  >|
+                  <a class="alternative-degree" id="alternative-degree" href="#"
+                    >°F</a
+                  ></span
                 >
               </div>
 
