--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
+       <!--  <img src="images/background-day.png" class="background" alt="day" />
     <div class="background">
-      <video
+        <video
         playsinline
         loop
         muted
@@ -34,6 +35,7 @@
         src="images/SunCloud.mp4"
         alt="SunCloud"
       />
+      <img src="images/background-day.png" class="background" alt="day" /> -->
     </div>
     <div class="container">
       <div class="card-container">
