Little touches on text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               alt="SunCloud"
             />
             <div class="header-left col-6">
-              <div class="day-time">Day of the week and time <br /></div>
+              <div class="day-time">Last updated: <span id="day-time">Day of the week and time </span><br /></div>
               <div class="city">Barcelona</div>
               <div class="current-weather-description">Partially clouded</div>
             </div>
@@ -188,7 +188,7 @@
             href="https://github.com/Aylhenia/Vanilla-Weather-App"
             target="_blank"
             id="gitHub"
-            >Open-source code by </a
+            >open-source code by </a
           >LCA
         </div>
       </div>
