update forecast html from the js

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
           <br />
           <br />
 
-          <div class="future-meteo row justify-content-center">
+          <div class="forecast"  id="forecast">
+           <!--  <div class="row justify-content-center">
             <div class="day1 col-2">
               <strong class="week-day">Fri</strong>
               <img
@@ -179,6 +180,7 @@
                   >14</span
                 ><span class="min-degree degree">°C</span>
               </div>
+              </div> -->
             </div>
           </div>
         </div>
