add unit change to feels like T

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Feels like:
                 <span class="feeling-description"
                   ><span id="feels-like" class="temperature">25</span
-                  ><span class="degree">°C</span></span
+                  ><span class="degree" id="feels-like-degree">°C</span></span
                 >
               </div>
               <div class="current-temperature">
