2nd attempt to change Units

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
             <div class="header-right col-6">
               <div class="feels-like">
                 Feels like:
-                <span class="feeling-description"
+                <span class="feeling-description temperature-set"
                   ><span id="feels-like" class="temperature">25</span
                   ><span class="degree" id="feels-like-degree">°C</span></span
                 >
               </div>
-              <div class="current-temperature">
+              <div class="current-temperature temperature-set">
                 <span class="current-temp temperature"> 23</span
                 ><span class="current-unit degree">°C</span>
                 <span class="alternative-units"
