--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
       <div class="signature">
         Illustrations and
         <a
-          href="https://github.com/Aylhenia/Vanilla-Weather-App"
+          href="https://github.com/LaiaCastilla/Vanilla-Weather-App"
           target="_blank"
-          id="gitHub"
-          >open-source code by </a
-        >LCA
+          id="code"
+          >open-source code by
+        </a>
+        <a href="https://github.com/LaiaCastilla/" target="_blank" id="Laia's github">Laia</a>
       </div>
     </div>
     <script src="src/index.js"></script>
